Remember output (monitor) configuration/placement, mode and scaling
.config/monitors.xml
is usually used to remember the above. We should parse that and forward the corresponding config to phoc I think it makes sense to keep out of this and have the 'policy' in the shell.
(I don't think we have a bug tracking that yet)
Edited by Guido Günther