desktop: Save and load output configuration state changes

We trigger persisting output states on config changes and look
for a matching output configuration when a new output needs to
be configured.

Helps: https://gitlab.gnome.org/World/Phosh/phoc/-/issues/255

Signed-off-by: Guido Günther <agx@sigxcpu.org>
Part-of: <https://gitlab.gnome.org/World/Phosh/phoc/-/merge_requests/687>