src/output.h
@@ -176,6 +176,7 @@ void       phoc_output_lower_shield          (PhocOutput *self, PhocEasing easin
 void       phoc_output_raise_shield          (PhocOutput *self, gboolean show_spinner);
 float      phoc_output_get_scale             (PhocOutput *self);
 const char *phoc_output_get_name             (PhocOutput *self);
+const char *phoc_output_get_identifier       (PhocOutput *self);
 void       phoc_output_transform_damage      (PhocOutput *self, pixman_region32_t *damage);
 void       phoc_output_transform_box         (PhocOutput *self, struct wlr_box *box);
 GSList    *phoc_output_get_debug_damage      (PhocOutput *self);
